[package]
name = "ch8ti-prep"
version = "0.9.0"
edition = "2021"
authors = ["Peter Lafreniere <peter@n8pjl.ca>"]
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "3.1.1"
clap = { version = "3.2.22", features = ["derive"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
